[gd_scene load_steps=4 format=3 uid="uid://ddyyrs7mrup5c"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_a7ve5"]
[ext_resource type="PackedScene" uid="uid://bwltsypi3u0ij" path="res://scenes/bullet.tscn" id="2_rhao5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brupg"]
size = Vector2(160, 136)

[node name="Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_a7ve5")
bullet_scene = ExtResource("2_rhao5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_brupg")
debug_color = Color(0.959308, 9.62615e-08, 0.522344, 0.42)

[node name="ShootingTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
